--- a/public/index.html
+++ b/public/index.html
@@ -4,63 +4,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Review Your Rent</title>
-
-  <!-- update the version number as needed -->
-  <script defer src="/__/firebase/8.0.1/firebase-app.js"></script>
-  <!-- include only the Firebase features as you need -->
-  <script defer src="/__/firebase/8.0.1/firebase-database.js"></script>
+  <link href="main.css" type="text/css" rel="stylesheet"/>
+<!--  <script  src="/__/firebase/8.0.1/firebase-app.js"></script>-->
+<!--  <script  src="/__/firebase/8.0.1/firebase-database.js"></script>-->
   <!--    <script defer src="/__/firebase/8.0.1/firebase-functions.js"></script>-->
-  <!--
-    initialize the SDK after all desired features are loaded, set useEmulator to false
-    to avoid connecting the SDK to running emulators.
-  -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+<!--    <script  src="/__/firebase/init.js?useEmulator=true"></script>-->
     <link href="styling/review-block.css" rel="stylesheet" type="text/css"/>
   </head>
 <body>
-<div id="message">
-  <h1>Review Your Rent</h1>
-  <p>This is the beginning</p>
-</div>
 <div id="root"></div>
 
 <p id="load">Firebase SDK Loading&hellip;</p>
 
-<script>
-  // import firebase from "firebase";
 
-  document.addEventListener('DOMContentLoaded', function () {
-    const loadEl = document.querySelector('#load');
-    // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-    // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        firebase.database().ref('/reviews/').on('value', snapshot => console.log);
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth',
-            'database',
-            'functions',
-            'hosting'
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
   <script src="scripts.js"></script>
   </body>
 </html>
