--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Review Your Rent</title>
     <link href="main.css" type="text/css" rel="stylesheet"/>
     <link href="styling/review-block.css" rel="stylesheet" type="text/css"/>
+    <link href="styling/top-nav-bar.css" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
