Finalised how resources load #9
Signed-off-by: Brian Evans <ebrian101@gmail.com>

--- a/public/static-pages/index.html
+++ b/public/static-pages/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Review Your Rent</title>
-    <link href="../styling/review-block.css" rel="stylesheet" type="text/css"/>
     <link href="../styling/top-nav-bar.css" rel="stylesheet" type="text/css"/>
+    <link href="../styling/review-block.css" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
-  <div id="root"><h1>Review Your Rent</h1>
+  <div id="root">
+    <h1>Review Your Rent</h1>
     <nav class="top-nav-bar">
       <ul>
         <li><a href="/">Home</a></li>
@@ -21,6 +22,6 @@
     <div>Search for a house in Exeter:<input type="text"></div>
     <div><h3>Recent reviews</h3></div>
   </div>
-  <script defer src="../scripts/scripts.js"></script>
+  <script defer src="../scripts/index.js"></script>
   </body>
 </html>
