--- a/public/static-pages/other.html
+++ b/public/static-pages/other.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>Review Your Rent</title>
-  <link href="../styling/review-block.css" rel="stylesheet" type="text/css"/>
-  <link href="../styling/top-nav-bar.css" rel="stylesheet" type="text/css"/>
+    <link href="../styling/main.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
