Orange styling of site
Signed-off-by: Brian Evans <ebrian101@gmail.com>

--- a/public/static-pages/other.html
+++ b/public/static-pages/other.html
@@ -5,6 +5,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>Review Your Rent</title>
     <link href="../styling/main.css" rel="stylesheet" type="text/css"/>
+    <link href="../media/icon.svg" rel="icon">
 </head>
 
 <body>
