--- a/public/static-pages/index.html
+++ b/public/static-pages/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Review Your Rent</title>
     <link href="../styling/main.css" rel="stylesheet" type="text/css"/>
+    <link href="../media/icon.svg" rel="icon">
   </head>
 
   <body>
