--- a/public/static-pages/other.html
+++ b/public/static-pages/other.html
@@ -4,8 +4,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>Review Your Rent</title>
-    <link href="../styling/main.css" rel="stylesheet" type="text/css"/>
-    <link href="../media/icon.svg" rel="icon">
+  <link href="../styling/main.css" rel="stylesheet" type="text/css"/>
+  <link href="../media/icon.svg" rel="icon">
+  <script defer
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJ-iWesbnnGXaDjKvGhlKB9G10odKSEOI&libraries=places">
+  </script>
 </head>
 
 <body>
