--- a/public/static-pages/index.html
+++ b/public/static-pages/index.html
@@ -6,8 +6,9 @@
     <title>Review Your Rent</title>
     <link href="../styling/main.css" rel="stylesheet" type="text/css"/>
     <link href="../media/icon.svg" rel="icon">
+<!--    <script src="../scripts/event.js"></script>-->
     <script defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJ-iWesbnnGXaDjKvGhlKB9G10odKSEOI&libraries=places">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJ-iWesbnnGXaDjKvGhlKB9G10odKSEOI&libraries=places&callback=addAutocompleteEventListenerToSearchBox">
     </script>
   </head>
 
@@ -64,6 +65,6 @@
       </div>
       <p>Loading...</p></div>
   </div>
-  <script defer src="../scripts/index.js"></script>
+  <script src="../scripts/index.js"></script>
   </body>
 </html>
