--- a/public/static-pages/index.html
+++ b/public/static-pages/index.html
@@ -8,7 +8,7 @@
     <link href="../media/icon.svg" rel="icon">
 <!--    <script src="../scripts/event.js"></script>-->
     <script defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJ-iWesbnnGXaDjKvGhlKB9G10odKSEOI&libraries=places&callback=addAutocompleteEventListenerToSearchBox">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJ-iWesbnnGXaDjKvGhlKB9G10odKSEOI&libraries=places">
     </script>
   </head>
 
