--- a/public/static-pages/property.html
+++ b/public/static-pages/property.html
@@ -7,7 +7,7 @@
     <link href="../styling/main.css" rel="stylesheet" type="text/css"/>
     <link href="../media/icon.svg" rel="icon">
     <script defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJ-iWesbnnGXaDjKvGhlKB9G10odKSEOI&libraries=places&callback=addAutocompleteEventListenerToSearchBox">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJ-iWesbnnGXaDjKvGhlKB9G10odKSEOI&libraries=places">
     </script>
 </head>
 
