--- a/public/static-pages/index.html
+++ b/public/static-pages/index.html
@@ -6,11 +6,35 @@
     <title>Review Your Rent</title>
     <link href="../styling/main.css" rel="stylesheet" type="text/css"/>
     <link href="../media/icon.svg" rel="icon">
+    <script defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJ-iWesbnnGXaDjKvGhlKB9G10odKSEOI&libraries=places">
+    </script>
   </head>
 
   <body>
   <div id="root">
-    <h1>Review Your Rent</h1>
+    <div class="logo-container"><a href="/">
+      <h1>
+        <svg height="75" viewBox="0 0 127.94 109.36" width="75" xmlns="http://www.w3.org/2000/svg">
+          <defs>
+            <style>.a {
+              stroke: #000;
+              stroke-miterlimit: 10;
+            }
+
+            .b {
+              fill: #ff744d;
+            }</style>
+          </defs>
+          <path class="a"
+                d="M104.5,50.16V19.64H88.27V38.28l-17.77-13L7.23,71.58l3.54,4.84,9-6.55L39,128h63l19.28-58.13,8.95,6.55,3.54-4.84ZM92.25,89.73l5.13,29.94L70.5,105.53,43.62,119.67l5.13-29.94L27,68.53l30.06-4.37L70.5,36.92,83.94,64.16,114,68.53Z"
+                transform="translate(-6.53 -19.14)"></path>
+          <polygon class="b"
+                   points="85.72 70.59 90.85 100.53 63.97 86.39 37.09 100.53 42.22 70.59 20.47 49.39 50.53 45.02 63.97 17.78 77.41 45.02 107.47 49.39 85.72 70.59"></polygon>
+        </svg>
+        Review Your Rent
+      </h1>
+    </a></div>
     <nav class="top-nav-bar">
       <ul>
         <li><a href="/">Home</a></li>
@@ -18,10 +42,28 @@
         <li><a href="/profile">View profile</a></li>
       </ul>
     </nav>
-    <div><h2>Home Page</h2></div>
-    <div>Search for a house in Exeter:<input type="text"></div>
-    <div><h3>Recent reviews</h3></div>
+    <div class="top-header-container">
+      <div class="top-header-stripe"></div>
+      <div class="top-header-title"><h2 class="page-title">Homepage</h2></div>
+    </div>
+    <div>
+      <div class="sub-title-container">
+        <div class="sub-title-stripe"></div>
+        <div class="sub-title-label"><h3 class="sub-title">Search</h3></div>
+      </div>
+      <div>
+        <div id="search-box-wrapper"><input class="search-box" inputmode="search"
+                                            placeholder="Street address" type="text"></div>
+        <div id="search-suggestions"></div>
+      </div>
+    </div>
+    <div>
+      <div class="sub-title-container">
+        <div class="sub-title-stripe"></div>
+        <div class="sub-title-label"><h3 class="sub-title">Recent reviews</h3></div>
+      </div>
+      <p>Loading...</p></div>
   </div>
-  <script defer src="../scripts/index.js"></script>
+  <script src="../scripts/index.js"></script>
   </body>
 </html>
