💾 Server side rendering of index.html
Signed-off-by: Brian Evans <ebrian101@gmail.com>

--- a/public/static-pages/index.html
+++ b/public/static-pages/index.html
@@ -15,7 +15,7 @@
   <div id="root">
     <div class="logo-container"><a href="/">
       <h1>
-        <svg height="75" viewBox="0 0 127.94 109.36" width="75" xmlns="http://www.w3.org/2000/svg">
+        <svg height="60" viewBox="0 0 127.94 109.36" width="60" xmlns="http://www.w3.org/2000/svg">
           <defs>
             <style>.a {
               stroke: #000;
@@ -52,9 +52,11 @@
         <div class="sub-title-label"><h3 class="sub-title">Search</h3></div>
       </div>
       <div>
-        <div id="search-box-wrapper"><input class="search-box" inputmode="search"
-                                            placeholder="Street address" type="text"></div>
-        <div id="search-suggestions"></div>
+        <div id="search-box-wrapper"><input class="search-box" inputMode="search"
+                                            placeholder="Street address" type="text"/></div>
+        <div id="search-suggestions">
+          <div id="google-maps-attribution"></div>
+        </div>
       </div>
     </div>
     <div>
